@@ -5,25 +5,32 @@ import com.openclassrooms.tourguide.helper.InternalTestHelper;
 import com.openclassrooms.tourguide.tracker.Tracker;
 import com.openclassrooms.tourguide.user.User;
 import com.openclassrooms.tourguide.user.UserReward;
-
-import java.time.LocalDateTime;
-import java.time.ZoneOffset;
-import java.util.*;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Service;
-
 import gpsUtil.GpsUtil;
 import gpsUtil.location.Attraction;
 import gpsUtil.location.Location;
 import gpsUtil.location.VisitedLocation;
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
 import tripPricer.Provider;
 import tripPricer.TripPricer;
+
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Random;
+import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.Comparator;
 
 @Service
 public class TourGuideService {
@@ -34,10 +41,12 @@ public class TourGuideService {
 	public final Tracker tracker;
 	boolean testMode = true;
 
+	// Pool de threads avec availableProcessors * 4
+	private final ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() * 4);
+
 	public TourGuideService(GpsUtil gpsUtil, RewardsService rewardsService) {
 		this.gpsUtil = gpsUtil;
 		this.rewardsService = rewardsService;
-		
 		Locale.setDefault(Locale.US);
 
 		if (testMode) {
@@ -55,8 +64,9 @@ public class TourGuideService {
 	}
 
 	public VisitedLocation getUserLocation(User user) {
-        return (!user.getVisitedLocations().isEmpty()) ? user.getLastVisitedLocation()
-                : trackUserLocation(user);
+		Object visitedLocation = (user.getVisitedLocations().size() > 0) ? user.getLastVisitedLocation()
+				: trackUserLocation(user);
+		return (VisitedLocation) visitedLocation;
 	}
 
 	public User getUser(String userName) {
@@ -64,7 +74,7 @@ public class TourGuideService {
 	}
 
 	public List<User> getAllUsers() {
-		return internalUserMap.values().stream().collect(Collectors.toList());
+		return new ArrayList<>(internalUserMap.values());
 	}
 
 	public void addUser(User user) {
@@ -82,69 +92,42 @@ public class TourGuideService {
 		return providers;
 	}
 
-	public VisitedLocation trackUserLocation(User user) {
-		VisitedLocation visitedLocation = gpsUtil.getUserLocation(user.getUserId());
-		user.addToVisitedLocations(visitedLocation);
-		rewardsService.calculateRewards(user);
-		return visitedLocation;
-	}
-
-
-	public CompletableFuture<VisitedLocation> trackUserLocationAsync(User user) {
+	public CompletableFuture<VisitedLocation> trackUserLocation(User user) {
 		return CompletableFuture.supplyAsync(() -> {
 			VisitedLocation visitedLocation = gpsUtil.getUserLocation(user.getUserId());
 			user.addToVisitedLocations(visitedLocation);
-			rewardsService.calculateRewards(user);
+			rewardsService.calculateRewardsAsync(user).join();
 			return visitedLocation;
-		});
+		}, executor);
 	}
 
-
-
-	public List<NearbyAttractionDTO> getNearByAttractions(User user, VisitedLocation visitedLocation) {
+	public List<NearbyAttractionDTO> getNearByAttractions(VisitedLocation visitedLocation) {
 		Location userLocation = visitedLocation.location;
-
+		logger.info("userLocation -------------- : {} {}", userLocation.latitude, userLocation.longitude);
 		List<Attraction> nearestAttractions = gpsUtil.getAttractions().stream()
-				.sorted(Comparator.comparingDouble(attraction -> rewardsService.getDistance(attraction, userLocation)))
+				.sorted(Comparator.comparingDouble(attraction -> rewardsService.getDistance(visitedLocation.location, attraction)))
 				.limit(5)
-				.toList();
+				.collect(Collectors.toList());
 
 		List<NearbyAttractionDTO> nearbyAttractionDTOs = new ArrayList<>();
 
 		for (Attraction attraction : nearestAttractions) {
-			double distance = rewardsService.getDistance(attraction, userLocation);
-			int rewardPoints = rewardsService.getRewardPoints(attraction, user);
+			NearbyAttractionDTO nearbyAttractionDTO = new NearbyAttractionDTO();
+			nearbyAttractionDTO.setAttractionName(attraction.attractionName);
+			Location locationAttraction = new Location(attraction.latitude, attraction.longitude);
+			nearbyAttractionDTO.setAttractionLocation(locationAttraction);
 
-			NearbyAttractionDTO dto = new NearbyAttractionDTO(
-					attraction.attractionName,
-					attraction.latitude,
-					attraction.longitude,
-					userLocation.latitude,
-					userLocation.longitude,
-					distance,
-					rewardPoints
-			);
+			nearbyAttractionDTO.setUserLocation(userLocation);
+			double distance = rewardsService.getDistance(visitedLocation.location, attraction);
+			nearbyAttractionDTO.setDistanceMiles(distance);
 
-			nearbyAttractionDTOs.add(dto);
+			int rewardPoints = rewardsService.getRewardsCentral().getAttractionRewardPoints(attraction.attractionId, visitedLocation.userId);
+			nearbyAttractionDTO.setRewardPoints(rewardPoints);
+
+			nearbyAttractionDTOs.add(nearbyAttractionDTO);
 		}
-
 		return nearbyAttractionDTOs;
 	}
-
-
-
-	public void calculateRewardsForAllUsers() {
-		List<User> allUsers = getAllUsers();
-
-		List<CompletableFuture<Void>> futures = allUsers.stream()
-				.map(user -> CompletableFuture.runAsync(() -> rewardsService.calculateRewards(user)))
-				.toList();
-
-		// Attendre que tous les calculs soient terminés
-		CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
-	}
-
-
 
 	private void addShutDownHook() {
 		Runtime.getRuntime().addShutdownHook(new Thread() {
@@ -155,13 +138,11 @@ public class TourGuideService {
 	}
 
 	/**********************************************************************************
-	 * 
+	 *
 	 * Methods Below: For Internal Testing
-	 * 
+	 *
 	 **********************************************************************************/
 	private static final String tripPricerApiKey = "test-server-api-key";
-	// Database connection will be used for external users, but for testing purposes
-	// internal users are provided and stored in memory
 	private final Map<String, User> internalUserMap = new HashMap<>();
 
 	private void initializeInternalUsers() {
@@ -171,7 +152,6 @@ public class TourGuideService {
 			String email = userName + "@tourGuide.com";
 			User user = new User(UUID.randomUUID(), userName, phone, email);
 			generateUserLocationHistory(user);
-
 			internalUserMap.put(userName, user);
 		});
 		logger.debug("Created " + InternalTestHelper.getInternalUserNumber() + " internal test users.");
@@ -200,5 +180,4 @@ public class TourGuideService {
 		LocalDateTime localDateTime = LocalDateTime.now().minusDays(new Random().nextInt(30));
 		return Date.from(localDateTime.toInstant(ZoneOffset.UTC));
 	}
-
 }
